--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,2 +1,6 @@
 ﻿@using Marigold
+@using PagedList.Core;
+@using PagedList.Core.Mvc;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
++ @addTagHelper *, PagedList.Core.Mvc
