--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -35,3 +35,35 @@ textarea {
         display: none;
     }
 }
+
+span.field-validation-error{
+    color: #d9534f
+}
+
+.checkbox label{
+    padding-left: 0px;
+}
+
+	
+.row.vertical-divider {
+  overflow: hidden;
+}
+.row.vertical-divider > div[class^="col-"] {
+  padding-left:30px;
+  padding-bottom: 100px;
+  margin-bottom: -100px;
+  border-left: 3px solid #F2F7F9;
+  border-right: 3px solid #F2F7F9;
+}
+.row.vertical-divider div[class^="col-"]:first-child {
+  border-left: none;
+}
+.row.vertical-divider div[class^="col-"]:last-child {
+  border-right: none;
+}
+
+.pager li.active > a
+{
+    text-decoration: none;
+    background-color: #eee;
+}
