--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -67,3 +67,36 @@ span.field-validation-error{
     text-decoration: none;
     background-color: #eee;
 }
+
+form.static{
+    border: solid #f7f7f9;
+    border-width: .2rem;
+    padding: 1.5rem;
+}
+
+.form-control-static{
+    padding-top: 0px;
+}
+
+.centeredContent{
+    text-align: center;
+    padding: 5px;
+}
+
+.gold-text {
+
+  color:	#D5AD6D; /*if no support for background-clip*/
+	
+	background: -webkit-linear-gradient(transparent, transparent),
+             -webkit-linear-gradient(top, rgba(213,173,109,1) 0%, rgba(213,173,109,1) 26%, rgba(226,186,120,1) 35%, rgba(163,126,67,1) 45%, rgba(145,112,59,1) 61%, rgba(213,173,109,1) 100%);
+	background: -o-linear-gradient(transparent, transparent);
+	-webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+@media print
+{
+    body * { visibility: hidden; }
+    #printableArea * { visibility: visible; }
+    #printableArea { position: absolute; top: 40px; left: 30px; }
+}
