--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,13 +26,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Marigold</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Mari<span class="gold-text">gold</span></a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Reservations" asp-action="Index">Home</a></li>
                 </ul>
             </div>
         </div>
@@ -41,7 +39,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - Marigold Hotels</p>
+            <p>&copy; 2017 - Mari<span class="gold-text">gold</span> Hotels</p>
         </footer>
     </div>
 
